<resources>
    <string name="app_name">OpenWeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="getting_location">Getting Location</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="degreeCelsius">°C</string>
    <string name="degreeFahrenheit">°F</string>
    <string name="select_unit">Select Unit</string>
</resources>