<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherData"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/radioGroup"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degreeCelsius"
            android:id="@+id/degreeCelsius">

        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degreeFahrenheit"
            android:id="@+id/degreeFahrenheit">

        </RadioButton>


    </RadioGroup>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:id="@+id/today"
       app:layout_constraintRight_toLeftOf="@+id/week"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:id="@+id/week"
        app:layout_constraintLeft_toRightOf="@+id/today"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"

        >

    </Button>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/getting_location"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWeatherData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="20dp"
        android:text="@string/select_unit"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        android:layout_marginLeft="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>